--- a/app/src/main/res/layout/activity_act1.xml
+++ b/app/src/main/res/layout/activity_act1.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rl1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="5dp"
-    android:background="#000"
+    android:id="@+id/dl_main"
     tools:context="com.tweekerz.ind.virtualspeedo.Act1">
 
-    <TextView
-        android:id="@+id/pp"
+    <RelativeLayout
+        android:id="@+id/rl1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp"
-        android:gravity="left"
-        android:text="Privacy Policy"
-        android:textColor="#fff"
-        android:textSize="18dp" />
-    <Button
-        android:background="#00f"
-        android:textColor="#fff"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
-        android:text="Unlock digital speedometer for this session"
-        android:textSize="10dp"
-        android:enabled="false"
-        android:layout_below="@+id/lbl1"
-        android:layout_alignParentRight="true"
-        android:id="@+id/rwrd_btn"
-        android:layout_width="match_parent"
-        android:layout_height="20dp" />
+        android:layout_height="match_parent"
+        android:background="#000"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/pp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="5dp"
+            android:gravity="left"
+            android:text="Privacy Policy"
+            android:textColor="#fff"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/rwrd_btn"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_below="@+id/lbl1"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:background="#00f"
+            android:enabled="false"
+            android:gravity="center"
+            android:text="Unlock digital speedometer for this session"
+            android:textColor="#fff"
+            android:textSize="10dp" />
 <TextView
     android:id="@+id/lbl1"
     android:textColor="#00ff00"
@@ -41,116 +47,153 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Analog/Digital"/>
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/tgl_switch"
-        android:padding="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:textSize="18dp"
-        android:enabled="false"
-        app:thumbTint="#0ff"
-        app:trackTint="#73f" />
 
-    <TextView
-        android:id="@+id/altitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:gravity="center"
-        android:text="0"
-        android:textColor="#fff"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:visibility="visible" />
-
-    <LinearLayout
-        android:id="@+id/center_lyt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/speed_digital_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0.0"
-            android:textColor="#00ff00"
-            android:textSize="120sp"
-            android:visibility="gone" />
-        <TextView
-            android:id="@+id/km"
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/tgl_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="km/h"
-            android:textColor="#00ff00"
-            android:textSize="40sp"
-            android:visibility="gone" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:enabled="false"
+            android:padding="5dp"
+            android:textSize="18dp"
+            app:thumbTint="#0ff"
+            app:trackTint="#73f" />
 
-        <com.github.anastr.speedviewlib.SpeedView
-            android:id="@+id/speed_tv"
+        <TextView
+            android:id="@+id/altitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/pp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:id="@+id/center_lyt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:gravity="center"
-            android:visibility="visible"
-            app:sv_backgroundCircleColor="#000"
-            app:sv_centerCircleColor="#73f"
-            app:sv_highSpeedColor="#af0000"
-            app:sv_indicatorColor="#00ff00"
-            app:sv_lowSpeedColor="#00af00"
-            app:sv_markColor="#0ff"
-            app:sv_maxSpeed="300"
-            app:sv_mediumSpeedColor="#f0af00"
-            app:sv_speedTextColor="#00ff00"
-            app:sv_speedTextSize="23dp"
-            app:sv_speedometerMode="NORMAL"
-            app:sv_textColor="#00ff00"
-            app:sv_textSize="25dp"
-            app:sv_tickNumber="6"
-            app:sv_unitSpeedInterval="5dp"
-            app:sv_unitTextColor="#0ff"
-            app:sv_unitTextSize="21dp"
-            app:sv_unitUnderSpeedText="true" />
-    </LinearLayout>
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/top_speed_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/last_top_speed_time"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="0"
-        android:textColor="#D4AF37"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/speed_digital_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0.0"
+                android:textColor="#00ff00"
+                android:textSize="120sp"
+                android:visibility="gone" />
 
-    <TextView
-        android:layout_above="@+id/adView"
-        android:id="@+id/last_top_speed_time"
+            <TextView
+                android:id="@+id/km"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="km/h"
+                android:textColor="#00ff00"
+                android:textSize="40sp"
+                android:visibility="gone" />
+            <com.github.anastr.speedviewlib.AwesomeSpeedometer
+                android:id="@+id/speed_tv_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="gone"
+                app:sv_backgroundCircleColor="#000"
+                app:sv_centerCircleColor="#73f"
+                app:sv_highSpeedColor="#af0000"
+                app:sv_indicatorColor="#00ff00"
+                app:sv_lowSpeedColor="#00af00"
+                app:sv_markColor="#0ff"
+                app:sv_maxSpeed="300"
+                app:sv_mediumSpeedColor="#f0af00"
+                app:sv_speedTextColor="#00ff00"
+                app:sv_speedTextSize="23dp"
+                app:sv_speedometerMode="NORMAL"
+                app:sv_textColor="#00ff00"
+                app:sv_textSize="25dp"
+                app:sv_tickNumber="6"
+                app:sv_unitSpeedInterval="5dp"
+                app:sv_unitTextColor="#0ff"
+                app:sv_unitTextSize="21dp"
+                app:sv_unitUnderSpeedText="true" />
+
+            <com.github.anastr.speedviewlib.SpeedView
+                android:id="@+id/speed_tv_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="visible"
+                app:sv_backgroundCircleColor="#000"
+                app:sv_centerCircleColor="#73f"
+                app:sv_highSpeedColor="#af0000"
+                app:sv_indicatorColor="#00ff00"
+                app:sv_lowSpeedColor="#00af00"
+                app:sv_markColor="#0ff"
+                app:sv_maxSpeed="300"
+                app:sv_mediumSpeedColor="#f0af00"
+                app:sv_speedTextColor="#00ff00"
+                app:sv_speedTextSize="23dp"
+                app:sv_speedometerMode="NORMAL"
+                app:sv_textColor="#00ff00"
+                app:sv_textSize="25dp"
+                app:sv_tickNumber="6"
+                app:sv_unitSpeedInterval="5dp"
+                app:sv_unitTextColor="#0ff"
+                app:sv_unitTextSize="21dp"
+                app:sv_unitUnderSpeedText="true" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/top_speed_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/last_top_speed_time"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#D4AF37"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/last_top_speed_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/adView"
+            android:layout_centerInParent="true"
+            android:text="01-01-1970 05:30:00"
+            android:textColor="#fff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="ca-app-pub-3925957206744972/5904204585" />
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="01-01-1970 05:30:00"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="ca-app-pub-3925957206744972/5904204585"/>
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/navigation_menu">
+
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
