--- a/app/src/main/res/layout/activity_act1.xml
+++ b/app/src/main/res/layout/activity_act1.xml
@@ -2,9 +2,9 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/dl_main"
     tools:context="com.tweekerz.ind.virtualspeedo.Act1">
 
     <RelativeLayout
@@ -13,17 +13,6 @@
         android:layout_height="match_parent"
         android:background="#000"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/pp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="5dp"
-            android:gravity="left"
-            android:text="Privacy Policy"
-            android:textColor="#fff"
-            android:textSize="18dp" />
 
         <Button
             android:id="@+id/rwrd_btn"
@@ -38,15 +27,16 @@
             android:text="Unlock digital speedometer for this session"
             android:textColor="#fff"
             android:textSize="10dp" />
-<TextView
-    android:id="@+id/lbl1"
-    android:textColor="#00ff00"
-    android:padding="5dp"
-    android:textSize="18dp"
-    android:layout_toLeftOf="@+id/tgl_switch"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Analog/Digital"/>
+
+        <TextView
+            android:id="@+id/lbl1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/tgl_switch"
+            android:padding="5dp"
+            android:text="Analog/Digital"
+            android:textColor="#00ff00"
+            android:textSize="18dp" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/tgl_switch"
@@ -65,10 +55,48 @@
             android:id="@+id/altitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pp"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/tgl_switch"
             android:layout_marginTop="25dp"
-            android:gravity="center"
+            android:gravity="left"
+            android:text="0"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/accuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/altitude"
+            android:layout_marginTop="15dp"
+            android:gravity="left"
+            android:text="Accuracy : 0 Meter"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/speed_accuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/accuracy"
+            android:layout_marginTop="15dp"
+            android:gravity="left"
+            android:text="0 Meter"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/sat_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/speed_accuracy"
+            android:layout_marginTop="15dp"
+            android:gravity="left"
             android:text="0"
             android:textColor="#fff"
             android:textSize="25sp"
@@ -79,7 +107,9 @@
             android:id="@+id/center_lyt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_above="@+id/top_speed_tv"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -102,36 +132,30 @@
                 android:textColor="#00ff00"
                 android:textSize="40sp"
                 android:visibility="gone" />
+
             <com.github.anastr.speedviewlib.AwesomeSpeedometer
                 android:id="@+id/speed_tv_2"
-                android:layout_width="match_parent"
+                android:layout_width="400dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="bottom"
                 android:visibility="gone"
-                app:sv_backgroundCircleColor="#000"
-                app:sv_centerCircleColor="#73f"
-                app:sv_highSpeedColor="#af0000"
-                app:sv_indicatorColor="#00ff00"
-                app:sv_lowSpeedColor="#00af00"
-                app:sv_markColor="#0ff"
+                app:sv_indicatorColor="#f0af00"
+                app:sv_speedometerColor="#f00"
+                app:sv_speedometerMode="TOP"
                 app:sv_maxSpeed="300"
-                app:sv_mediumSpeedColor="#f0af00"
-                app:sv_speedTextColor="#00ff00"
                 app:sv_speedTextSize="23dp"
-                app:sv_speedometerMode="NORMAL"
-                app:sv_textColor="#00ff00"
-                app:sv_textSize="25dp"
+                app:sv_textSize="15dp"
+                app:sv_unitTextSize="11dp"
                 app:sv_tickNumber="6"
                 app:sv_unitSpeedInterval="5dp"
-                app:sv_unitTextColor="#0ff"
-                app:sv_unitTextSize="21dp"
-                app:sv_unitUnderSpeedText="true" />
+                app:sv_unitUnderSpeedText="true"
+                app:sv_withIndicatorLight="true" />
 
             <com.github.anastr.speedviewlib.SpeedView
                 android:id="@+id/speed_tv_1"
-                android:layout_width="match_parent"
+                android:layout_width="400dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="bottom"
                 android:visibility="visible"
                 app:sv_backgroundCircleColor="#000"
                 app:sv_centerCircleColor="#73f"
@@ -143,13 +167,13 @@
                 app:sv_mediumSpeedColor="#f0af00"
                 app:sv_speedTextColor="#00ff00"
                 app:sv_speedTextSize="23dp"
-                app:sv_speedometerMode="NORMAL"
+                app:sv_speedometerMode="TOP"
                 app:sv_textColor="#00ff00"
-                app:sv_textSize="25dp"
+                app:sv_textSize="15dp"
                 app:sv_tickNumber="6"
                 app:sv_unitSpeedInterval="5dp"
                 app:sv_unitTextColor="#0ff"
-                app:sv_unitTextSize="21dp"
+                app:sv_unitTextSize="11dp"
                 app:sv_unitUnderSpeedText="true" />
         </LinearLayout>
 
@@ -171,7 +195,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/adView"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
             android:text="01-01-1970 05:30:00"
             android:textColor="#fff"
             android:textSize="20sp"
