--- a/app/src/main/res/layout/activity_act1.xml
+++ b/app/src/main/res/layout/activity_act1.xml
@@ -18,78 +18,12 @@
         android:gravity="left"
         android:text="Privacy Policy"
         android:textColor="#fff"
-        android:textSize="18dp" />
-
-    <Button
-        android:id="@+id/rwrd_btn"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/lbl1"
-        android:layout_marginTop="2dp"
-        android:background="#00f"
-        android:enabled="false"
-        android:gravity="center"
-        android:text="Unlock digital speedometer for this session"
-        android:textColor="#fff"
-        android:textSize="10dp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/lbl1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/tgl_switch"
-        android:padding="5dp"
-        android:text="Analog/Digital"
-        android:textColor="#00ff00"
-        android:textSize="18dp" />
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/tgl_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:enabled="true"
-        android:padding="5dp"
-        android:textSize="18dp"
-        app:thumbTint="#0ff"
-        app:trackTint="#73f" />
-
-    <TextView
-        android:id="@+id/lbl2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tgl_switch_unit"
-        android:layout_toLeftOf="@+id/tgl_switch_unit"
-        android:padding="5dp"
-        android:text="KMPH/MPH"
-        android:textColor="#00ff00"
-        android:textSize="18dp" />
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/tgl_switch_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/tgl_switch"
-        android:enabled="true"
-        android:padding="5dp"
-        android:textSize="18dp"
-        app:thumbTint="#0ff"
-        app:trackTint="#73f" />
-        android:layout_height="match_parent"
-        android:background="#000"
-        android:orientation="vertical">
+        android:textSize="18dp">
 
         <Button
             android:id="@+id/rwrd_btn"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_below="@+id/lbl1"
             android:layout_alignParentRight="true"
             android:layout_marginTop="2dp"
             android:background="#00f"
@@ -97,98 +31,141 @@
             android:gravity="center"
             android:text="Unlock digital speedometer for this session"
             android:textColor="#fff"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:visibility="gone" />
+
 
         <TextView
-            android:id="@+id/lbl1"
+            android:id="@+id/lbl2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/tgl_switch"
             android:padding="5dp"
-            android:text="Analog/Digital"
+            android:text="KMPH/MPH"
             android:textColor="#00ff00"
             android:textSize="18dp" />
 
         <android.support.v7.widget.SwitchCompat
-            android:id="@+id/tgl_switch"
+            android:id="@+id/tgl_switch_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:enabled="false"
+            android:enabled="true"
             android:padding="5dp"
             android:textSize="18dp"
             app:thumbTint="#0ff"
             app:trackTint="#73f" />
 
-    <TextView
-        android:id="@+id/altitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/pp"
-        android:layout_marginTop="26dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:gravity="center"
-        android:text="0fffffffffffffffffffffff"
-        android:textColor="#fff"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:visibility="visible" />
-        <TextView
-            android:id="@+id/altitude"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tgl_switch"
-            android:layout_marginTop="25dp"
-            android:gravity="left"
-            android:text="0"
-            android:textColor="#fff"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
+            android:layout_below="@+id/tgl_switch_unit"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
 
-        <TextView
+            <TextView
+                android:id="@+id/altitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+
+                android:gravity="center"
+                android:text="0fffffffffffffffffffffff"
+                android:textColor="#fff"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+
+            <TextView
             android:id="@+id/accuracy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/altitude"
-            android:layout_marginTop="15dp"
+
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="10dp"
             android:gravity="left"
             android:text="Accuracy : 0 Meter"
             android:textColor="#fff"
-            android:textSize="25sp"
+                android:layout_marginLeft="10dp"
             android:textStyle="bold"
-            android:visibility="visible" />
+                android:textSize="15sp"
+
+                android:visibility="visible" />
 
         <TextView
             android:id="@+id/speed_accuracy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/accuracy"
-            android:layout_marginTop="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:gravity="left"
             android:text="0 Meter"
             android:textColor="#fff"
-            android:textSize="25sp"
+            android:layout_marginTop="25dp"
             android:textStyle="bold"
+            android:textSize="15sp"
             android:visibility="visible" />
 
         <TextView
             android:id="@+id/sat_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/speed_accuracy"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/accuracy"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="10dp"
             android:gravity="left"
-            android:text="0"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="25dp"
             android:textColor="#fff"
-            android:textSize="25sp"
+            android:text="0 Used in last fix 0"
             android:textStyle="bold"
+            android:textSize="15sp"
             android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/distance_covered"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sat_count"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:gravity="left"
+                android:text="Distance covered : 0.0 km"
+                android:textColor="#fff"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/distance_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_below="@+id/speed_accuracy"
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="15dp"
+                android:layout_toEndOf="@+id/distance_covered"
+                android:layout_toRightOf="@+id/distance_covered"
+                android:background="#f00"
+                android:hapticFeedbackEnabled="true"
+                android:text="reset"
+                android:textAllCaps="true"
+                android:textColor="#fff"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/center_lyt"
@@ -196,29 +173,11 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/top_speed_tv"
             android:layout_centerHorizontal="true"
-            android:paddingBottom="10dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="15dp"
+            android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/speed_digital_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0.0"
-            android:textColor="#00ff00"
-            android:textSize="120sp"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/km"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Km/h"
-            android:textColor="#00ff00"
-            android:textSize="40sp"
-            android:visibility="gone" />
             <TextView
                 android:id="@+id/speed_digital_tv"
                 android:layout_width="match_parent"
@@ -234,10 +193,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="km/h"
+                android:text="Km/h"
                 android:textColor="#00ff00"
                 android:textSize="40sp"
                 android:visibility="gone" />
+
 
             <com.github.anastr.speedviewlib.AwesomeSpeedometer
                 android:id="@+id/speed_tv_2"
@@ -246,15 +206,16 @@
                 android:gravity="bottom"
                 android:visibility="gone"
                 app:sv_indicatorColor="#f0af00"
-                app:sv_speedometerColor="#f00"
-                app:sv_speedometerMode="TOP"
                 app:sv_maxSpeed="300"
                 app:sv_speedTextSize="23dp"
+                app:sv_cutPadding="20dp"
+                app:sv_speedometerColor="#f00"
                 app:sv_textSize="15dp"
-                app:sv_unitTextSize="11dp"
                 app:sv_tickNumber="6"
                 app:sv_unitSpeedInterval="5dp"
+                app:sv_speedometerMode="TOP"
                 app:sv_unitUnderSpeedText="true"
+                app:sv_unitTextSize="11dp"
                 app:sv_withIndicatorLight="true" />
 
             <com.github.anastr.speedviewlib.SpeedView
@@ -279,7 +240,8 @@
                 app:sv_tickNumber="6"
                 app:sv_unitSpeedInterval="5dp"
                 app:sv_unitTextColor="#0ff"
-                app:sv_unitTextSize="11dp"
+                app:sv_cutPadding="20dp"
+                app:sv_unitTextSize="20dp"
                 app:sv_unitUnderSpeedText="true" />
         </LinearLayout>
 
@@ -296,26 +258,7 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/last_top_speed_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/adView"
-        android:layout_centerInParent="true"
-        android:text="01-01-1970 05:30:00"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="ca-app-pub-3925957206744972/5904204585" />
-</RelativeLayout>
         <TextView
             android:id="@+id/last_top_speed_time"
             android:layout_width="wrap_content"
